# fintech_quiz_bot

./: .gitignore  db_crud.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 122a1042ecee_model_user.py  214967dd7499_fk_ondelete__rel_cascade.py  327a715ee921_fixed_some_fields.py  95e2e40f7ef6_tables_ct_sb_qz_op_ua_created.py  bee62f755af3_model_user_chat_id_bigint.py
bot/: config.py  main.py
bot/handlers/: __init__.py  followers.py  import_ex_to_db.py  register.py  start.py
bot/handlers/menu/: __init__.py  testlar.py
bot/keyboards/defualt/: menu.py
bot/keyboards/inline/: category.py  option.py  quiz.py  subcategory.py
bot/services/: importer.py
bot/states/: quiz.py  register.py
bot/utils/callbacks/: call_data.py
bot/utils/quiz/: category.py  quizzes.py  subcategory.py  user.py  user_answer.py
bot/xlsx/: helper.py  test_pd.py
bot/xlsx/data/: 2025-11-26 18:53:59.402155.xlsx  school.xlsx  students.xlsx
db/: __init__.py  base.py  engine.py  session.py
db/models/: __init__.py  category.py  option.py  quiz.py  subcategory.py  user.py  user_answer.py
